# pokemon-teams

./: LICENSE  pyproject.toml
core/: manage.py
core/accounts/: models.py  serializers.py  urls.py  views.py
core/accounts/migrations/: 0001_initial.py  0002_add_trainer_model.py
core/corePokemonTeams/: asgi.py  settings.py  urls.py  wsgi.py
core/pokemonTeams/: admin.py  apps.py  asgi.py  forms.py  permissions.py  serializers.py  settings.py  urls.py  wsgi.py
core/pokemonTeams/migrations/: 0001_initial.py  0002_insert_pokemon_types.py  0003_insert_pokemon.py  0004_alter_pokemon_types.py  0005_remove_team_pokemons_alter_trainerpokemon_box_and_more.py
core/pokemonTeams/models/: __init__.py  box.py  pokemon.py  pokemonType.py  team.py  trainerPokemon.py
core/pokemonTeams/serializers/: __init__.py  box_serializers.py  pokemon_serializers.py  pokemon_type_serializers.py  team_serializers.py  trainer_pokemon_serializers.py
core/pokemonTeams/templates/: base.html
core/pokemonTeams/templates/pokemonTeams/: box_confirm_delete.html  box_detail.html  box_form.html  box_list.html  home.html  pokemon_confirm_delete.html  (+9 more)
core/pokemonTeams/views/: __init__.py  box_views.py  pokemon_type_views.py  pokemon_views.py  team_views.py  trainer_pokemon_view.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/app/: store.js
frontend/src/components/: LoginForm.jsx  LoginModal.jsx  LoginPopup.jsx  Navbar.jsx  PokemonCard.jsx  PokemonType.jsx
frontend/src/features/: home.jsx
frontend/src/routes/: pokedex.jsx
(+9 files in other folders)
