[tool.poetry]
name = "core-pokemonteams"
version = "0.1.0"
description = ""
authors = ["Sergio <sergiocasanovalopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
